--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@
   .nav-link::before {
     content: "";
 
-    @apply absolute inset-0 top-[3.75rem] z-10 block h-full w-0 origin-center border-b-[3px] border-b-white/50 transition-all max-tab:border-b-0;
+    @apply absolute inset-0 top-[3.75rem] z-10 block h-full w-0 origin-center border-b-[3px] border-b-white/50 transition-all max-lg:top-4;
   }
   .nav-link:hover::before {
     @apply w-full origin-center;
@@ -67,6 +67,6 @@
   }
 
   .name {
-    @apply max-w-[62rem] grow-[1] text-[5.6rem] uppercase text-white max-lg:text-[4rem] max-tab:text-[2.4rem];
+    @apply max-w-[62rem]  text-[5.6rem] uppercase text-white max-lg:text-[4rem] max-tab:text-[2.4rem];
   }
 }
