--- a/index.css
+++ b/index.css
@@ -52,10 +52,10 @@
   .nav-link::before {
     content: "";
 
-    @apply absolute inset-0 top-[3.75rem] z-10 block h-full w-0 origin-center border-b-[3px] border-b-white/50 transition-all max-lg:top-4;
+    @apply absolute inset-0 top-[3.75rem] z-10 block h-full w-0 origin-center border-b-[3px]  transition-all max-lg:top-4;
   }
   .nav-link:hover::before {
-    @apply w-full origin-center;
+    @apply w-full origin-center border-b-white/50;
   }
 
   .side-text {
