--- a/index.css
+++ b/index.css
@@ -55,11 +55,14 @@
 
   .nav-link::before {
     content: "";
-
-    @apply absolute inset-0 top-[3.75rem] z-10 block h-full w-0 origin-center border-b-[3px]  transition-all max-lg:top-4;
+    @apply absolute inset-0 top-[5.5rem] block  border-b-[3px]  transition-all max-lg:top-4;
+  }
+  .nav-link::before {
+    @apply scale-0;
+    transform-origin: center;
   }
   .nav-link:hover::before {
-    @apply w-full origin-center border-b-white/50;
+    @apply scale-100 border-b-white/50;
   }
 
   .side-text {
